
syntax = "proto3";
option java_multiple_files = true;
option java_package = "dev.hieunv.grpc.strings";

package dev.hieunv.grpc;

message Request {
  string lowerCase = 1;
}

message Response {
  string upperCase = 1;
}

service StringsService {
  rpc getUpperCaseString(Request) returns(Response) {}
}